syntax = "proto3";

package multi_tenant;

option go_package = "./multitenant";

message CrtTransaction {
  int32 tenant_id = 1;
  int32 branch_id = 2;
  int32 product_id = 3;
  int32 quantity_sold = 4;
  double price_per_unit = 5;
}

message TransactionResponse {
  string message = 1;
  bool success = 2;
}

service MultiTenant {
  rpc CreateTransaction (CrtTransaction) returns (TransactionResponse);
}
